src/compiler/CompilerParser.java
// Generated from Compiler.g4 by ANTLR 4.5.3

package compiler;
import com.sun.corba.se.impl.io.TypeMismatchException;
import com.sun.org.apache.xml.internal.security.signature.ReferenceNotInitializedException; // ...

import java.util.*;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CompilerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		TYPE=25, INC_DEC=26, INT_OP=27, INT_EQ_OP=28, CMP_OP=29, BOOL_OP=30, NAME=31, 
		INT_NUM=32, BLOCK_COMMENTS=33, LINE_COMMENTS=34, WS=35;
	public static final int
		RULE_main = 0, RULE_varDeclarationString = 1, RULE_varDeclaration = 2, 
		RULE_statement = 3, RULE_varStatement = 4, RULE_expression = 5;
	public static final String[] ruleNames = {
		"main", "varDeclarationString", "varDeclaration", "statement", "varStatement", 
		"expression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'public'", "'class'", "'{'", "'static'", "'main'", "'('", "'String'", 
		"'['", "']'", "'...'", "'args'", "')'", "'return'", "';'", "'}'", "','", 
		"'='", "'if'", "'else'", "'while'", "'for'", "'true'", "'false'", "'!'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "TYPE", "INC_DEC", "INT_OP", "INT_EQ_OP", "CMP_OP", "BOOL_OP", "NAME", 
		"INT_NUM", "BLOCK_COMMENTS", "LINE_COMMENTS", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Compiler.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private HashMap<String, Variable> variables = new HashMap<>();
	    private LinkedList<String> instructions = new LinkedList<>();
	    private ArrayList<Integer> constants = new ArrayList<>();
	    private final String BOOL = "boolean";
	    private final String INT = "int";
	    private int line;
	    private int column;    //TODO

	    public ArrayList<Integer> getConstants() {
	        return new ArrayList<>(constants);
	    }
	    public LinkedList<String> getInstructions() {
	        return new LinkedList<>(instructions);
	    }

	    private class Variable {
	        int index;
	        String type;
	        boolean initialized = false;
	        Variable(int i, String t) {
	            index = i;
	            type = t;
	        }
	    }

	    private String bAddr(int addr) {
	        return (addr >> 8) + " " + (addr & 0xFF);
	    }

	    private void checkVariable(String name, String type) {
	        checkVariable(name);
	        checkType(type, variables.get(name).type);
	    }
	    private void checkVariable(String name) {
	        if (!variables.containsKey(name))
	            throw new Error("Variable is not defined: " + name);
	    }
	    private void checkType(String expected, String found) {
	        if (!expected.equals(found)) {
	            throw  new Error("Type mistmatch: " + expected + " expexted, " + found + " found");
	        }
	    }
	    private void checkVarInitialized(String name) {
	        if (!variables.get(name).initialized)
	                throw new Error("Variable not initialized: " + name);
	    }
	    private void checkExpressionType(String expected, ExpressionContext expr) {
	            expr.getStart().getCharPositionInLine();
	            if (!expected.equals(expr.type)) {
	                throw  new TypeMismatchException(expected + " expexted, " + expr.type + " found:" +
	                    " position " + expr.getStart().getLine() + ":" + expr.getStart().getCharPositionInLine());
	            }
	        }

	    //Принимает тип условного (как ожидается) выражения и его инструкции.
	    //Возвращает адрес начала цикла (условного выражения)
	    private int doStuffBeforeLoop(String type, LinkedList<String> ownInstructions) {
	        checkType(BOOL, type);
	        int loopBeginAddr = instructions.size();
	        instructions.addAll(ownInstructions);
	        instructions.add("!");
	        return loopBeginAddr;
	    }

	    //Принимает адрес начала цикла
	    private void doStuffAfterLoop(int loopBeginAddr, int conditionAddr) {
	        instructions.add("goto " + bAddr(loopBeginAddr));
	        int loopEndAddr = instructions.size();
	        instructions.set(conditionAddr, "ifeq " +  bAddr(loopEndAddr));
	    }

	    //Устанавливает вместо всех относительных адресов абсолютные в инструкциях вида "?if... +adr"
	    private void setJmpAdresses() {
	        for (ListIterator<String> i = instructions.listIterator(); i.hasNext();) {
	            String instr = i.next();
	            if (instr.charAt(0) == '?') {
	                int offsetStartInd = instr.indexOf('+');        // '-' TODO ?
	                int offset = Integer.parseInt(instr.substring(offsetStartInd));
	                int position = i.previousIndex() + offset;
	                i.set(instr.substring(1, offsetStartInd) +  bAddr(position));
	            }
	        }
	    }


	public CompilerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MainContext extends ParserRuleContext {
		public Token NAME;
		public Token TYPE;
		public List<TerminalNode> NAME() { return getTokens(CompilerParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(CompilerParser.NAME, i);
		}
		public TerminalNode TYPE() { return getToken(CompilerParser.TYPE, 0); }
		public List<VarDeclarationStringContext> varDeclarationString() {
			return getRuleContexts(VarDeclarationStringContext.class);
		}
		public VarDeclarationStringContext varDeclarationString(int i) {
			return getRuleContext(VarDeclarationStringContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).exitMain(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(12);
			match(T__0);
			setState(13);
			match(T__1);
			setState(14);
			((MainContext)_localctx).NAME = match(NAME);
			setState(15);
			match(T__2);

			            //Соответствие имени файла
			        
			setState(17);
			match(T__0);
			setState(18);
			match(T__3);
			setState(19);
			((MainContext)_localctx).TYPE = match(TYPE);
			setState(20);
			match(T__4);
			setState(21);
			match(T__5);
			setState(22);
			match(T__6);
			setState(26);
			switch (_input.LA(1)) {
			case T__7:
				{
				setState(23);
				match(T__7);
				setState(24);
				match(T__8);
				}
				break;
			case T__9:
				{
				setState(25);
				match(T__9);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(28);
			match(T__10);
			setState(29);
			match(T__11);
			setState(30);
			match(T__2);
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__17) | (1L << T__19) | (1L << T__20) | (1L << TYPE) | (1L << NAME))) != 0)) {
				{
				setState(33);
				switch (_input.LA(1)) {
				case TYPE:
					{
					setState(31);
					varDeclarationString();
					}
					break;
				case T__2:
				case T__17:
				case T__19:
				case T__20:
				case NAME:
					{
					setState(32);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(38);
			match(T__12);
			setState(39);
			((MainContext)_localctx).NAME = match(NAME);
			setState(40);
			match(T__13);
			setState(41);
			match(T__14);
			setState(42);
			match(T__14);

			            String name = ((MainContext)_localctx).NAME.getText();
			            checkVariable(name, ((MainContext)_localctx).TYPE.getText());
			            setJmpAdresses();
			            instructions.add("ret #" + variables.get(name).index);  //add return anywhere?
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationStringContext extends ParserRuleContext {
		public Token TYPE;
		public TerminalNode TYPE() { return getToken(CompilerParser.TYPE, 0); }
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public VarDeclarationStringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclarationString; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).enterVarDeclarationString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).exitVarDeclarationString(this);
		}
	}

	public final VarDeclarationStringContext varDeclarationString() throws RecognitionException {
		VarDeclarationStringContext _localctx = new VarDeclarationStringContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_varDeclarationString);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			((VarDeclarationStringContext)_localctx).TYPE = match(TYPE);
			setState(46);
			varDeclaration(((VarDeclarationStringContext)_localctx).TYPE.getText());
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__15) {
				{
				{
				setState(47);
				match(T__15);
				setState(48);
				varDeclaration(((VarDeclarationStringContext)_localctx).TYPE.getText());
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
			match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationContext extends ParserRuleContext {
		public String type;
		public Token NAME;
		public ExpressionContext expr;
		public TerminalNode NAME() { return getToken(CompilerParser.NAME, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public VarDeclarationContext(ParserRuleContext parent, int invokingState, String type) {
			super(parent, invokingState);
			this.type = type;
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).enterVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).exitVarDeclaration(this);
		}
	}

	public final VarDeclarationContext varDeclaration(String type) throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState(), type);
		enterRule(_localctx, 4, RULE_varDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			((VarDeclarationContext)_localctx).NAME = match(NAME);

			            String name = ((VarDeclarationContext)_localctx).NAME.getText();
			            if (variables.containsKey(name))
			                    throw new Error("Variable '" + name +"' is already defined in the scope");
			            int index = variables.size() + 1;
			            variables.put(name, new Variable(index, _localctx.type));

			        
			setState(62);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(58);
				match(T__16);
				setState(59);
				((VarDeclarationContext)_localctx).expr = expression(0);

				                checkType(_localctx.type, ((VarDeclarationContext)_localctx).expr.type);
				                instructions.addAll(((VarDeclarationContext)_localctx).expr.ownInstructions);
				                variables.get(name).initialized = true;
				                instructions.add("istore #" + index);
				            
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ExpressionContext expr;
		public Token iselse;
		public VarStatementContext repeatSt;
		public VarStatementContext vs;
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<VarDeclarationStringContext> varDeclarationString() {
			return getRuleContexts(VarDeclarationStringContext.class);
		}
		public VarDeclarationStringContext varDeclarationString(int i) {
			return getRuleContext(VarDeclarationStringContext.class,i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VarStatementContext varStatement() {
			return getRuleContext(VarStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		int _la;
		try {
			setState(119);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{

				            HashMap<String, Variable> outerVariables = new HashMap(variables);  //TODO локальные переменные перекрывают глобальные
				        
				setState(65);
				match(T__2);
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__17) | (1L << T__19) | (1L << T__20) | (1L << TYPE) | (1L << NAME))) != 0)) {
					{
					setState(68);
					switch (_input.LA(1)) {
					case T__2:
					case T__17:
					case T__19:
					case T__20:
					case NAME:
						{
						setState(66);
						statement();
						}
						break;
					case TYPE:
						{
						setState(67);
						varDeclarationString();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(72);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(73);
				match(T__14);

				            variables = outerVariables;
				        
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				match(T__17);
				setState(76);
				match(T__5);
				setState(77);
				((StatementContext)_localctx).expr = expression(0);
				setState(78);
				match(T__11);

				            checkType(BOOL, ((StatementContext)_localctx).expr.type);
				            instructions.addAll(((StatementContext)_localctx).expr.ownInstructions);
				            instructions.add("!");
				            int conditionAddr = instructions.size() - 1;

				        
				setState(80);
				statement();

				            instructions.add("~");
				            int elseOrEndifAddr = instructions.size();

				            instructions.set(conditionAddr, "ifeq " + bAddr(elseOrEndifAddr));
				        
				setState(86);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(82);
					((StatementContext)_localctx).iselse = match(T__18);
					setState(83);
					statement();

					            int elseEnd = instructions.size();
					            instructions.set(elseOrEndifAddr - 1, "goto " + bAddr(elseEnd));
					        
					}
					break;
				}

				            if (((StatementContext)_localctx).iselse == null) {
				                instructions.set(conditionAddr, "ifeq " + bAddr(elseOrEndifAddr - 1));
				                instructions.remove(elseOrEndifAddr - 1);
				            }
				        
				}
				break;
			case T__19:
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				match(T__19);
				setState(91);
				match(T__5);
				setState(92);
				((StatementContext)_localctx).expr = expression(0);
				setState(93);
				match(T__11);

				            int beginAddr = doStuffBeforeLoop(((StatementContext)_localctx).expr.type, ((StatementContext)_localctx).expr.ownInstructions);
				            int conditionAddr = instructions.size() - 1;
				        
				setState(95);
				statement();

				            doStuffAfterLoop(beginAddr, conditionAddr);
				        
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 4);
				{

				            HashMap<String, Variable> outerVariables = new HashMap(variables);
				        
				setState(99);
				match(T__20);
				setState(100);
				match(T__5);
				setState(103);
				switch (_input.LA(1)) {
				case TYPE:
					{
					setState(101);
					varDeclarationString();
					}
					break;
				case T__13:
					{
					setState(102);
					match(T__13);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(105);
				((StatementContext)_localctx).expr = expression(0);
				setState(106);
				match(T__13);
				setState(108);
				_la = _input.LA(1);
				if (_la==NAME) {
					{
					setState(107);
					((StatementContext)_localctx).repeatSt = varStatement();
					}
				}

				setState(110);
				match(T__11);

				            int beginAddr = doStuffBeforeLoop(((StatementContext)_localctx).expr.type, ((StatementContext)_localctx).expr.ownInstructions);
				            int conditionAddr = instructions.size() - 1;
				        
				setState(112);
				statement();

				            //if (repeatSt != null)   //????????????????????? why can't
				                instructions.addAll(((StatementContext)_localctx).repeatSt.ownInstructions);

				            doStuffAfterLoop(beginAddr, conditionAddr);

				            variables = outerVariables;

				        
				}
				break;
			case NAME:
				enterOuterAlt(_localctx, 5);
				{
				setState(115);
				((StatementContext)_localctx).vs = varStatement();
				setState(116);
				match(T__13);

				            instructions.addAll(((StatementContext)_localctx).vs.ownInstructions);
				        
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarStatementContext extends ParserRuleContext {
		public LinkedList<String> ownInstructions;
		public Token NAME;
		public ExpressionContext expr;
		public Token INT_EQ_OP;
		public Token INC_DEC;
		public TerminalNode NAME() { return getToken(CompilerParser.NAME, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode INT_EQ_OP() { return getToken(CompilerParser.INT_EQ_OP, 0); }
		public TerminalNode INC_DEC() { return getToken(CompilerParser.INC_DEC, 0); }
		public VarStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).enterVarStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).exitVarStatement(this);
		}
	}
